# mcp-consult

./: .eslintrc.json  .gitignore  .npmignore  ARCHITECTURE.md  CLEANUP_PROPOSAL.md  CODE_MAP.json  CODE_MAP.md  CONTRIBUTING.md  DEVLOG  EXPERIMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_GUIDE.md  OLLAMA_TIMEOUT_TUNING.md  OPTIMIZATION_INDEX.md  OPTIMIZATION_SUMMARY.md  OVERHAUL_COMPLETE.md  OVERHAUL_JOURNEY.md  OVERHAUL_SUMMARY.md  OVERHAUL_SUMMARY_OLD.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE2_REFACTORING.md  QUICKSTART.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_STATUS.md  REFACTOR_SUMMARY.md  TIMEOUT_HANDLING.md  TIMEOUT_QUICK_FIX.md  TIMEOUT_SOLUTION.md  build-output.txt  demo-output.txt  demo.py  eslint.config.js  fast_consult.py  glama.json  main.py  (+9 more)
.copilot/: REPOSITORY_RULES.instructions.md
.tmp/: ask_kimi_client_1763744293930.js
archive/: EXPERIMENT_SUMMARY.md  demo-compare-output.txt  demo-remember-output.txt
coverage/: config.ts.html  lcov.info
docs/: API_REFERENCE.md  EXAMPLES.md  INDEX.md  STREAMING_BEST_PRACTICES.md  TROUBLESHOOTING.md
examples/: vscode-chat-streaming-client.ts
scripts/: run_list_ollama_models.ts
src/: condition.ts  config.ts  conversationTypes.ts  demo-bridge.ts  demo-client.ts  executor.ts  flowParser.ts  handlers.ts  index.ts  invoke.ts  legacy-handlers.ts  logger.ts  mcpToolRegistrar.ts  memory.ts  modelSettings.ts  types.ts
test/: OllamaService.test.ts  executor.test.ts  executor_branching.test.ts  flowParser.test.ts  handlers.test.ts  invoke_timeout.test.ts  (+3 more)
(+59 files in other folders)
